Cria estrutura da pagina

--- a/index.html
+++ b/index.html
@@ -10,6 +10,81 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <main class="container">
+        <!-- Inicio Header -->
+        <header class="header">
+            <h1 class="header__title">10,000+ of our users love our products.</h1>
+            <p class="header__text">We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
+        </header>
+        <!-- Fim Header -->
+        <!-- Inicio Review -->
+        <section class="review">
+            <div class="review__rating">
+                <div class="review__img">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                </div>
+                <h2 class="review__title">Rated 5 Stars in Reviews</h2>
+            </div>
+            <div class="review__rating">
+                <div class="review__img">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                </div>
+                <h2 class="review__title">Rated 5 Stars in Report Guru</h2>
+            </div>
+            <div class="review__rating">
+                <div class="review__img">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                    <img src="./images/icon-star.svg" alt="" aria-hidden="true">
+                </div>
+                <h2 class="review__title">Rated 5 Stars in BestTech</h2>
+            </div>
+        </section>
+        <!-- Fim Review -->
+        <!-- Inicio Testimonial -->
+        <section class="testimonial">
+            <div class="testimonial__card">
+                <div class="profile">
+                    <img src="./images/image-colton.jpg" alt="Color Picture of Colton Smith">
+                    <span class="profile__name">
+                        <h3>Colton Smith</h2>
+                        <p>Verified Buyer</p>
+                    </span>
+                </div>
+                <p class="testimonial__title">"We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"</p>
+            </div>
+            <div class="testimonial__card">
+                <div class="profile">
+                    <img src="./images/image-irene.jpg" alt="Color Picture of Irene Roberts">
+                    <span class="profile__name">
+                        <h3>Irene Roberts</h2>
+                        <p>Verified Buyer</p>
+                    </span>
+                </div>
+                <p class="testimonial__title">"Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."</p>
+            </div>
+            <div class="testimonial__card">
+                <div class="profile">
+                    <img src="./images/image-anne.jpg" alt="Color Picture of Anne Wallace">
+                    <span class="profile__name">
+                        <h3>Anne Wallace</h2>
+                        <p>Verified Buyer</p>
+                    </span>
+                </div>
+                <p class="testimonial__title">"Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"</p>
+            </div>
+        </section>
+        <!-- Fim Testimonial -->
+    </main>
 </body>
 </html>
