Remove span por div

--- a/index.html
+++ b/index.html
@@ -56,35 +56,35 @@
             <div class="testimonial__card">
                 <div class="profile">
                     <img src="./images/image-colton.jpg" alt="Color Picture of Colton Smith">
-                    <span class="profile__name">
+                    <div class="profile__name">
                         <h3>Colton Smith</h2>
-                        <p>Verified Buyer</p>
-                    </span>
+                            <p>Verified Buyer</p>
+                        </div>
+                    </div>
+                    <p class="testimonial__title">"We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"</p>
                 </div>
-                <p class="testimonial__title">"We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"</p>
-            </div>
-            <div class="testimonial__card">
-                <div class="profile">
-                    <img src="./images/image-irene.jpg" alt="Color Picture of Irene Roberts">
-                    <span class="profile__name">
-                        <h3>Irene Roberts</h2>
-                        <p>Verified Buyer</p>
-                    </span>
-                </div>
-                <p class="testimonial__title">"Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."</p>
-            </div>
-            <div class="testimonial__card">
-                <div class="profile">
-                    <img src="./images/image-anne.jpg" alt="Color Picture of Anne Wallace">
-                    <span class="profile__name">
-                        <h3>Anne Wallace</h2>
-                        <p>Verified Buyer</p>
-                    </span>
-                </div>
-                <p class="testimonial__title">"Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"</p>
-            </div>
-        </section>
-        <!-- Fim Testimonial -->
-    </main>
-</body>
-</html>
+                <div class="testimonial__card">
+                    <div class="profile">
+                        <img src="./images/image-irene.jpg" alt="Color Picture of Irene Roberts">
+                        <div class="profile__name">
+                            <h3>Irene Roberts</h2>
+                                <p>Verified Buyer</p>
+                            </div>
+                        </div>
+                        <p class="testimonial__title">"Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."</p>
+                    </div>
+                    <div class="testimonial__card">
+                        <div class="profile">
+                            <img src="./images/image-anne.jpg" alt="Color Picture of Anne Wallace">
+                            <div class="profile__name">
+                                <h3>Anne Wallace</h2>
+                                    <p>Verified Buyer</p>
+                                </div>
+                            </div>
+                            <p class="testimonial__title">"Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"</p>
+                        </div>
+                    </section>
+                    <!-- Fim Testimonial -->
+                </main>
+            </body>
+            </html>
